--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "drizzle-orm": "^0.43.1",
     "googleapis": "^148.0.0",
     "lucide-react": "^0.508.0",
-    "next": "15.3.2",
+    "next": "^15.5.9",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^19.0.0",
+    "react": "^19.0.2",
+    "react-day-picker": "^9.4.3",
+    "react-dom": "^19.0.2",
     "react-hook-form": "^7.56.3",
     "react-loading-indicators": "^1.0.1",
     "sonner": "^2.0.3",
@@ -45,7 +45,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.1",
+    "drizzle-kit": "^0.31.8",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5"
