--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ NEXT_PUBLIC_CLERK_SIGN_UP_FORCE_REDIRECT_URL=/events
 DATABASE_URL=
 GOOGLE_OAUTH_CLIENT_ID=
 GOOGLE_OAUTH_CLIENT_SECRET=
-GOOGLE_OAUTH_REDIRECT_URL=
+GOOGLE_OAUTH_REDIRECT_URL=http://localhost:3000/api/oauth/callback
