--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@clerk/nextjs": "^6.19.1",
     "@clerk/themes": "^2.2.42",
     "@hookform/resolvers": "^5.0.1",
-    "@neondatabase/serverless": "^1.0.0",
+    "postgres": "^3.4.5",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
