--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env
 
+# kubernetes secrets (contains real credentials)
+k8s/app-secrets.yaml
+
 # vercel
 .vercel
 
